--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         
 		<div class="info">
-			<p class="tel"><span>お名前:</span>クレスコエンジニア<span>様</span></p>
+			<p class="tel"><span>お名前:</span>大田　忠博<span>様</span></p>
 			
 		</div>
 	</header>
@@ -63,6 +63,7 @@
 				<p>※当社で100円ご使用で1ポイント付与させて頂きます。</p>
 				<p>※ポイントのご使用は当社のみになります。</p>
 		</div>
+		
 		
 	</div>
 
